[WFCORE-3962] Fixing WF shell scripts to support modular JDKs.